@@ -1,9 +1,12 @@
 [BEGIN_RUN_INFO]
-	#Config Files
+    #Config Files
 	####################################
 	Config_Analysis = 'config/configAnalysis.cfg';
 	Config_Mapping = 'config/GE7MappingCMScernData2016_v2.cfg';
-	#Input Config
+    #Detector
+    ####################################
+    Detector_Name = 'GE1/1-VII-L-CERN-0001';
+    #Input Config
 	####################################
 	Input_Is_Frmwrk_Output = 'true';   #indicates we are running on input created by amoreSRS
 	#Output Config
