@@ -1,8 +1,11 @@
 [BEGIN_RUN_INFO]
-	#Config Files
+    #Config Files
 	####################################
 	Config_Analysis = 'CONFIGFILE_ANALYSIS';
 	Config_Mapping = 'CONFIGFILE_MAPPING';
+    #Detector
+    ####################################
+    Detector_Name = 'DETECTORNAME';
 	#Input Config
 	####################################
 	Input_Is_Frmwrk_Output = 'false';   #indicates we are running on input created by amoreSRS
