@@ -7,6 +7,12 @@
 *                                                *
 **************************************************
 
+Update: May 17th 2016
+==================================================
+->Disabled Uniformity::VisualizeUniformity::storeCanvasHisto2D() for now, doesn't seem to draw the detector properly
+->Run config file now asks the user for which detector they are processing.  The detector name now starts all TName's in the output TFile.
+->Added data members and methods to Uniformity::DetectorMPGD for detector name (DetectorMPGD::strDetName), getting the name ( DetectorMPGD::getName() ), and setting the name ( DetectorMPGD::setName() )
+
 Update: May 13th 2016
 ==================================================
 ->Added method Uniformity::VisualizeUniformity::storeCanvasGraph2D() for making 2D plots from TGraph's of each SectorEta in DetectorMPGD
